--- a/css/header.css
+++ b/css/header.css
@@ -11,6 +11,14 @@
 	background-color: #252525;
 }
 
+.component__header{
+	width: 1200px;
+	height: 100%;
+	margin: 0px auto;
+	display: flex;
+	justify-content: space-between;
+}
+
 
 /*Element of header__head*/
 
