--- a/css/main.css
+++ b/css/main.css
@@ -5,21 +5,13 @@
 	font-family: sans-serif;
 }
 
-.component__main{
-	width: 1200px;
-	height: 100%;
-	margin: 0px auto;
-	display: flex;
-	justify-content: space-between;
-	color: #fff;
-}
-
 /*Header css*/
 
 .header{
 	width: 100%;
 	height: 92px;
 	background-color: #CD1818;
+	color: #fff;
 }
 
 
@@ -29,14 +21,8 @@
 	width: 100%;
 	height: 1000px;
 	background-color: #F3F3F3;
+	color: #2d2d2d;
 }
-
-.body{
-	width: 1200px;
-	height: 100%;
-	margin: 0px auto;
-}
-
 
 /*Footer css*/
 
