--- a/css/body.css
+++ b/css/body.css
@@ -32,15 +32,101 @@
 	display: flex;
 }
 
+
+/*Slide show css*/
+
 .main__slideshow{
 	margin: 0px auto;
 	height: 300px;
 	width: 1200px;
 	background-color: #fff;
+	position: relative;
+}
+
+.prev, .next{
+	position: absolute;
+	top: 50%;
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	border: 0;
+	background-color: rgba(255,255,255,0);
+	transition: all 0.6s ease;
+	margin: 0px 8px; 
+	display: none;
+}
+
+.prev:hover , .next:hover{
+	background-color: rgba(150,150,150,0.8);
+}
+
+.next{
+	right: 0;
+}
+
+.link__slide{
+	display: block;
 }
 
 
-/*Slide show css*/
+/*Button prev and next slide*/
+.main__slideshow:hover .prev{
+	display: block;
+	animation: hoverButtonLeft 1s ease;
+}
+
+.main__slideshow:hover .next{
+	display: block;
+	animation: hoverButtonRight 1s ease;
+}
+
+@keyframes hoverButtonLeft{
+	from{
+		background-color: rgba(255,255,255,0.8);
+		transform: translateX(-10px);
+	}
+	to{
+		background-color: rgba(80,80,80,0.8);
+		transform: translateX(0px);
+	}
+}
+
+@keyframes hoverButtonRight{
+	from{
+		background-color: rgba(255,255,255,0.8);
+		transform: translateX(10px);
+	}
+	to{
+		background-color: rgba(80,80,80,0.8);
+		transform: translateX(0px);
+	}
+}
+
+
+
+/*Fade animation*/
+.fade{
+	animation-name: nextSlide;
+	animation-duration: 0.4s;
+}
+
+@keyframes nextSlide{
+	0%{
+		opacity: 0.5;
+		transform: scale(1.06);
+		transform: rotate(-2deg);
+	}
+	50%{
+		opacity: 0.5;
+		transform: scale(1.06);
+		transform: rotate(2deg);
+	}
+	100%{
+		opacity: 1;
+		transform: scale(1);
+		transform: rotate(0deg);
+	}
+}
 
 .main__slideshow-element{
 	width: 1200px;
@@ -83,9 +169,10 @@
 	transition: all 0.5s;
 }
 
-.dot:hover{
+.dot:hover, .active{
 	background-color: #666;
 }
+
 
 
 /*Thuong hieu laptop*/
