--- a/css/main.css
+++ b/css/main.css
@@ -33,4 +33,28 @@ body{
 .footer{
 	width: 100%;
 	height: 200px;
+	background-color: #fff;
+}
+
+/*Scroll to top*/
+
+#scroll__top{
+	display: none; /* Mặc định button sẽ được ẩn*/
+	position: fixed;
+	bottom: 20px;
+	right: 30px; 
+	z-index: 99; /* button được ưu tiên hiển thị đè lên các phần khác*/
+	border: none;
+	outline: none;
+	background-color: rgba(205,24,24,1);
+	color: white;
+	cursor: pointer;
+	padding: 15px;
+	border-radius: 10px;
+	transition: all 0.3s linear;
+}
+
+#scroll__top:hover{
+	background-color: rgba(205,24,24,1);
+	transform: scale(1.2);
 }
