--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ body{
 
 .main{
 	width: 100%;
-	height: 1000px;
+	height: 1100px;
 	background-color: #F3F3F3;
 	color: #2d2d2d;
 }
@@ -58,4 +58,8 @@ body{
 #scroll__top:hover{
 	background-color: rgba(205,24,24,1);
 	transform: scale(1.2);
+}
+
+.fa{
+	color: #fff;
 }
