--- a/css/header.css
+++ b/css/header.css
@@ -53,11 +53,12 @@
 	background-color: #333;
 }
 
-.shopping-cart{
+#shopping-cart{
 	margin: 9px 0px;
 	width: 50px;
 	height: 38px;
 	background-color: #CD1818;
+	outline: none;
 }
 
 /*Element header__menu*/
