--- a/css/form.css
+++ b/css/form.css
@@ -1,4 +1,98 @@
 .main__form{
-	background-color: yellow;
 	margin: 30px auto;
+}
+.shopping__title-text {
+	text-align: center;
+	color: red;
+	
+
+}
+
+.shopping__form-component{
+	margin: 0px 90px;
+	display: flex;
+}
+
+.label__input{
+	flex-grow: 1;
+}
+
+#shopping__form {
+	width: 600px;
+	margin: 20px auto;
+	border: 2px solid #000;
+	border-radius: 10px;
+	text-align: ;
+	padding: 20px 0;
+}
+
+
+.input__form{
+	padding: 0 10px;
+	box-shadow: inset 0 1px 3px 0 rgba(0,0,0,.22);
+	margin: 0px 0px 25px 10px;
+	height: 30px;
+	border: 1px solid #ccc;
+	width: 65%;
+	border-radius: 4px;
+}
+
+#button-submit {
+	padding: 0 10px;
+	margin: 0px 10px 10px 90px;
+	height: 30px;
+	border: 0px;
+	width: 100px;
+	border-radius: 4px;
+	background-color:rgb(58,219,21);
+	color: #fff;
+	transition: all 0.4s;
+	outline: none;
+	font-size: 14px;
+}
+#cancel {
+	text-decoration: none;
+	display: inline-block;
+	font-size: 14px;
+	height: 30px;
+	line-height: 30px;
+	border: 0px;
+	width: 100px;
+	border-radius: 4px;
+	background-color: rgb(239, 68, 68);
+	color: #fff;
+	transition: all 0.4s;
+	outline: none;
+	text-align: center;
+}
+#button-submit:hover {
+	background-color: rgba(58,219,21,0.8);
+	transform: scale(1.2);
+	cursor: pointer;
+}
+#cancel:hover {
+	background-color: rgb(239, 16, 16);
+	transform: scale(1.2);
+	cursor: pointer;
+}
+.return {
+	background-color: rgb(58,219,21);
+	padding: 8px 10px;
+	text-decoration: none;
+	border-radius: 5px;
+	color: #fff;
+}
+.return:hover{
+	background-color: rgba(58,219,21,0.8);
+}
+.submit__success {
+	text-align: center;
+}
+.congratulation {
+	margin: 30px 0;
+	font-size: 2rem;
+	color: #666;
+}
+.link__cancel{
+	display: block;
 }
