--- a/public/css/body.css
+++ b/public/css/body.css
@@ -1,5 +1,3 @@
-/*Element of body (main class)*/
-
 .main__distance1{
 	margin:  0px auto;
 	height: 35px;
@@ -138,19 +136,19 @@
 }
 
 .slide0{
-	background-image: url(image/SlideShow/slide_1.jpg);
+	background-image: url(/image/SlideShow/slide_1.jpg);
 }
 
 .slide1{
-	background-image: url(image/SlideShow/slide_2.jpg);
+	background-image: url(/image/SlideShow/slide_2.jpg);
 }
 
 .slide2{
-	background-image: url(image/SlideShow/slide_3.jpg);
+	background-image: url(/image/SlideShow/slide_3.jpg);
 }
 
 .slide3{
-	background-image: url(image/SlideShow/slide_4.jpg);
+	background-image: url(/image/SlideShow/slide_4.jpg);
 }
 
 .main__slideshow-dots{
@@ -163,6 +161,7 @@
 .dot{
 	width: 15px;
 	height: 15px;
+	margin: 0 3px;
 	border-radius: 50%;
 	background-color: #aaa;
 	display: inline-block;
@@ -197,23 +196,23 @@
 }
 
 .apple{
-	background-image: url(image/ThuonghieuLaptop/apple.png);
+	background-image: url(/image/ThuonghieuLaptop/apple.png);
 }
 
 .dell{
-	background-image: url(image/ThuonghieuLaptop/dell.png);
+	background-image: url(/image/ThuonghieuLaptop/dell.png);
 }
 
 .asus{
-	background-image: url(image/ThuonghieuLaptop/asus.png);
+	background-image: url(/image/ThuonghieuLaptop/asus.png);
 }
 
 .lenovo{
-	background-image: url(image/ThuonghieuLaptop/lenovo.png);
+	background-image: url(/image/ThuonghieuLaptop/lenovo.png);
 }
 
 .hp{
-	background-image: url(image/ThuonghieuLaptop/hp.png);
+	background-image: url(/image/ThuonghieuLaptop/hp.png);
 }
 
 
