--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,6 +1,6 @@
 .inner-footer {
 	width: 100%;
-	height: 220px;
+	height: 270px;
 	margin: auto;
 	padding: 20px 10px;
 	display: flex;
@@ -11,7 +11,7 @@
 #footer-logo {
     width: 100px;
     height: 100px;
-    background-image: url(image/logo.png);
+    background-image: url(/image/logo.png);
     background-size: cover;
     background-position: center;
     margin: 9px 0px 0px 0px;
@@ -96,4 +96,8 @@
 
 .footer .fa{
 	color: #666;
+}
+.footer {
+	background-color: #fff;
+	height: 300px;
 }
