--- a/public/css/header.css
+++ b/public/css/header.css
@@ -7,6 +7,7 @@
 }
 
 .header__menu{
+	line-height: 36px;
 	height: 36px;
 	background-color: #252525;
 }
@@ -25,7 +26,7 @@
 #header__logo {
     width: 50px;
     height: 50px;
-    background-image: url(image/logo.png);
+    background-image: url(/image/logo.png);
     background-size: cover;
     background-position: center;
     margin: 9px 0px 0px 0px;
@@ -131,4 +132,8 @@
 	100%{
 		opacity: 1;
 	}
+}
+#laptop-logo{
+	padding-top: 10px;
+	
 }
